# enum_decompose

./: Cargo.nix  Cargo.toml  README.md  fix.sh  flake.nix  shell.nix
enum_decompose/: Cargo.toml
enum_decompose/src/: lib.rs
enum_decompose_tests/: Cargo.toml
enum_decompose_tests/src/: lib.rs  tests.rs
variant_extraction/: Cargo.toml
variant_extraction/src/: lib.rs
variant_extraction_tests/: Cargo.toml
variant_extraction_tests/src/: lib.rs  tests.rs
