[package]
name = "enum_decompose"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Converting enum variants into structs"
keywords = ["macro"]

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
